# tauri-application-shadcn

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/commands/: storage.rs  workspace.rs
src-tauri/src/storage/: duckdb.rs  mod.rs  models.rs
src-tauri/src/workspace/: loader.rs  mod.rs  models.rs
src/lib/components/: AspectGrid.svelte  BodySelector.svelte  BottomTabs.svelte  ExpandablePanel.svelte  GlyphManager.svelte  MiddleContent.svelte  OpenExportDialog.svelte  PanelMenu.svelte  RadixChart.svelte  TimeNavigationPanel.svelte  TopBar.svelte
src/lib/components/ui/textarea/: textarea.svelte
src/lib/i18n/: cz.json  en.json  es.json  fr.json  index.svelte.ts
src/lib/icons/: Doc.svelte  Dynamic.svelte  Folder.svelte  Info.svelte  Logo.svelte  Radix.svelte  Revolution.svelte  Save.svelte  Settings.svelte  Star.svelte  Table.svelte  Transits.svelte  Upload.svelte  index.ts
src/lib/state/: layout.svelte.ts  layout.ts  theme.svelte.ts
src/lib/stores/: data.svelte.ts  glyphs.svelte.ts  timeNavigation.svelte.ts
src/lib/themes/presets/: default.json  index.ts  rose.json  violet.json
